# hearstock-frontend

.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  이슈-템플릿.md
hear_stock/: .pre-commit-config.yaml  README-customizing.md  README.md  analysis_options.yaml  pubspec.yaml
hear_stock/android/app/: CMakeLists.txt  build.gradle.kts
hear_stock/android/app/src/main/: AndroidManifest.xml
hear_stock/android/app/src/main/kotlin/com/example/hear_stock/: MainActivity.kt
hear_stock/assets/data/: chart_data.json
hear_stock/assets/sf2/: Synthesiser.sf2
hear_stock/docs/: MICHINT_GUIDE.md  THEME_GUIDE.md
hear_stock/ios/Runner/: Info.plist
hear_stock/ios/Runner.xcodeproj/: project.pbxproj
hear_stock/lib/: app_settings.dart  home_page.dart  landing_page.dart  main.dart  ris_page.dart  settings_page.dart  speech_recognition.dart
hear_stock/lib/ChartPage/: chart_page.dart  chart_page_controller.dart  chart_view.dart
hear_stock/lib/ffi/: soloud_ffi.dart
hear_stock/lib/providers/: intent_result_provider.dart
hear_stock/lib/services/: api_service.dart  stock_chart_service.dart  voice_scroll_handler.dart
hear_stock/lib/stores/: intent_result_store.dart
hear_stock/lib/utils/: voice_scroll_handler.dart
hear_stock/lib/widgets/: mic_hint.dart  mic_overlay.dart
hear_stock/linux/: CMakeLists.txt
hear_stock/linux/runner/: my_application.cc
hear_stock/native/: soloud_c_wrapper.cpp
hear_stock/test/: widget_test.dart
hear_stock/web/: index.html  manifest.json
hear_stock/windows/: CMakeLists.txt
(+28 files in other folders)
